# ROSbasics-udacity-RoboticsSoftware

./: .gitmodules  README.md
project1/: ReadMe.md
project1/model/mybuilding/: model.sdf
project1/model/myrobot/: model.sdf
project1/pictures/: world
project1/script/: welcome.cpp
project1/world/: myworld  myworld_gazebo7.world
project2/: Readme.md
project2/devel/: .catkin  local_setup.sh  setup.sh
project2/devel/lib/ball_chaser/: drive_bot  process_image
project2/devel/lib/pkgconfig/: ball_chaser.pc  my_robot.pc
project2/devel/share/ball_chaser/cmake/: ball_chaserConfig.cmake
project2/devel/share/my_robot/cmake/: my_robotConfig.cmake
project2/src/: p2.rviz
project2/src/ball_chaser/: CMakeLists.txt
project2/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
project2/src/my_robot/launch/: world.launch
project2/src/my_robot/urdf/: my_robot.xacro
project2/src/my_robot/world/: empty.world  world_mybuilding.world
project2/src/myball/: model.sdf
project3/EKF_lab/: README.md
project3/EKF_lab/devel/: .catkin  .rosinstall
project3/EKF_lab/devel/lib/pkgconfig/: main.pc  odom_to_trajectory.pc  robot_pose_ekf.pc  turtlebot_bringup.pc  turtlebot_capabilities.pc  turtlebot_description.pc  turtlebot_gazebo.pc  turtlebot_stage.pc  turtlebot_stdr.pc  turtlebot_teleop.pc
project3/EKF_lab/devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
project3/EKF_lab/src/: EKFpath.rviz  RvizLaunch.launch  rqt_multiplot.xml
project3/EKF_lab/src/main/: package.xml
project3/EKF_lab/src/main/launch/: main.launch
project3/Where_am_I/: ReadMe.md
project3/Where_am_I/src/: my_robot.rviz
project3/Where_am_I/src/my_robot/: package.xml
project3/exercise3/: 1D_KalmanFIlter.cpp
project3/exercise3/MCL/: CMakeLists.txt  README.md  resampling.cpp  solution.cpp
project3/exercise3/minimal_ex_matpltlib/: CMakeLists.txt  example.cpp
(+17 files in other folders)
